# BPA

./: README.md  main.cpp
Lines/: CMakeLists.txt  constant.h  gameField.cpp  gameField.h  gameView.cpp  gameView.h  handleEvents.cpp  handleEvents.h  initialize.cpp  initialize.h  main.cpp  randomTool.cpp  randomTool.h  stdafx.h  todo
SfmlAnimation/: CMakeLists.txt  constant.cpp  constant.h  main.cpp  stdafx.cpp  stdafx.h
Ultimate Shaman King/: CMakeLists.txt  Drawable.cpp  Drawable.h  Layer.h  Level.cpp  Level.h  Object.cpp  Object.h  Yoh.cpp  Yoh.h  constant.h  handleEvents.cpp  handleEvents.h  main.cpp  stdafx.h
UltimateShamanKing/: CMakeLists.txt  Coin.cpp  Coin.h  Dialog.cpp  Dialog.h  Fire.cpp  Fire.h  GameScene.cpp  GameScene.h  GameView.cpp  GameView.h  HPLine.cpp  HPLine.h  Line.cpp  Line.h  MoneyPanel.cpp  MoneyPanel.h  Player.cpp  Player.h  Random.h  Replica.cpp  Replica.h  Shield.cpp  Shield.h  Skill.cpp  Skill.h  SkillPanel.cpp  SkillPanel.h  Snowball.cpp  Snowball.h  TmxLevel.cpp  TmxLevel.h  Unit.cpp  Unit.h  constant.cpp  constant.h  main.cpp  stdafx.cpp  stdafx.h
UltimateShamanKing/Screens/: GameOver.cpp  GameOver.h  GameOverView.cpp  GameOverView.h  Menu.cpp  Menu.h  MenuBackground.cpp  MenuBackground.h  MenuView.cpp  MenuView.h
UltimateShamanKing/Units/: Beloved.cpp  Beloved.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  Unit.cpp  Unit.h  Villain.cpp  Villain.h  VillainSpirit.cpp  VillainSpirit.h
UltimateShamanKing/cmake_modules/: PVS-Studio.cmake
UltimateShamanKing/lib/tinyxml2/: tinyxml2.cpp  tinyxml2.h
UltimateShamanKing/res/: level0.tmx  level1 (копия).tmx  level1.tmx
clocks/: CMakeLists.txt  main.cpp
jump_refactoring/: CMakeLists.txt  main.cpp
